# sqrs-notes-app

./: .coverage  .gitignore  README.md  notes.db  pyproject.toml
.github/workflows/: main.yaml
backend/: .coverage
backend/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py  services.py
backend/tests/: pytest.ini  test_auth.py  test_crud.py  test_main.py  test_schemas.py  test_services.py
frontend/: .coverage  app.py  run_tests.py
frontend/tests/: test_auth.py  test_notes.py  test_utils.py
