[tool.poetry]
name = "notes-app"
package-mode = false
version = "0.1.0"
description = "Simple Notes App"
authors = [
    "Yoqub Davlatob",
    "Muhibullo Khujabekov",
    "Anton Chulakov",
    "Habibullo Assoev",
    "Azizullo Sadriddinzoda",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
pydantic = "^1.10.7"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
streamlit = "^1.22.0"
requests = "^2.28.2"
extra-streamlit-components = "^0.1.80"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
